<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_id_live">ca-app-pub-7182834619756575~7738106401</string>
    <string name="app_name">Movie Stream Hub</string>
    <string name="home_tab_label">Home</string>
    <string name="coming_soon_tab_label">Coming Soon</string>
    <string name="downloads_tab_label">Downloads</string>
    <string name="smart_downloads">Smart Downloads</string>
    <string name="introducing_downloads_for_you">Download content</string>
    <string name="we_ll_download_a_personalized">We\'ll download a personalized selection of movies and shows for you, so there\'s always something to watch on your phone.</string>
    <string name="set_up">SET UP</string>
    <string name="find_something_to_download">Find Something to Download</string>
    <string name="success">Success</string>
    <string name="http200">200</string>
    <string name="http401">401</string>
    <string name="http403">403</string>
    <string name="http404">404</string>
    <string name="http500">500</string>
    <string name="more_like_this">MORE LIKE THIS</string>
    <string name="trailers_amp_more"><![CDATA[TRAILERS & MORE]]></string>
    <string name="choose_a_tab">Choose a tab</string>
    <string name="sign_in">Sign in</string>
    <string name="account">Email</string>
    <string name="password">Password</string>
    <string name="forgot_passwor">Forgot Password</string>
    <string name="loggin">Sign In</string>
    <string name="signinwith">Or sign in with</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacy">Privacy</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="and"> and </string>
    <string name="policy">Policy</string>
    <string name="i_agree_with">I Agree with </string>
    <string name="username_not_empty">Email not empty</string>
    <string name="password_not_empty">Password not empty</string>
    <string name="registration_failed_please_try_again">Failed</string>
    <string name="Manager">Manager</string>
    <string name="sign_up_success">Sign Up Success</string>
    <string name="comment">Comment</string>
    <string name="propose">Propose</string>
    <string name="notification">Notification</string>
    <string name="my_list">Commented List</string>
    <string name="desception_my_list">Whenever you add content to My List, that work will appear here</string>
    <string name="title_button_my_list">Find content to add</string>
    <string name="watching_movie">Watching history</string>
    <string name="favorite_list">Favorite List</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="support">Support</string>

    <!--    Offline EXOPLAYER-->

    <string name="track_selection_title">Select tracks</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>

    <string name="error_generic">Playback failed</string>

    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>

    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>

    <string name="error_drm_unsupported_before_api_18">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>

    <string name="unsupported_ads_in_concatenation">Playing sample without ads, as ads are not supported in concatenations</string>

    <string name="download_start_error">Failed to start download</string>

    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>

    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>

    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>

    <string name="download_live_unsupported">This demo app does not support downloading live content</string>

    <string name="download_ads_unsupported">IMA does not support offline ads</string>

    <string name="prefer_extension_decoders">Prefer extension decoders</string>

    <string name="random_abr">Enable random ABR</string>

    <string name="tunneling">Request multimedia tunneling</string>

    <string name="download_start_error_offline_license">Failed to obtain offline license</string>

    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="label_download">DOWNLOAD</string>
    <string name="label_play_video_offline">Play Video Offline</string>

    <string name="app_id_def">CC1AD845</string>
    <string name="app_id_drm">A12D4273</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="Video" />
    <string name="AUDIO">Audio</string>
    <string name="title_text">Text</string>
    <string name="profile">Profile</string>
    <string name="dislay_name">Display Name</string>
    <string name="email">E-mail</string>
    <string name="change_password">Change password</string>
    <string name="dob">Date of Birth</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="dislay_name_not_Emty">Display Name not empty</string>
    <string name="oldpassword">Old password</string>
    <string name="send">Send</string>
    <string name="email_is_empty">E-mail not Empty</string>
    <string name="rewarded_interstitial_ad_id_live">ca-app-pub-7182834619756575/4143557899</string>
    <string name="adUnitIdTest">ca-app-pub-3940256099942544/5224354917</string>
    <string name="play_list">Playlist</string>
    <string name="admin">Admin panel</string>
    <string name="category">Category</string>
    <string name="topic">Topic</string>
    <string name="country">Country</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edt">Edit</string>
    <string name="_return">Return</string>
    <string name="send_us_some">Send us some feedback!</string>
    <string name="found_a_bug"> Found a bug? Have a suggestion? Fill out the form below, and we’ll take a look</string>
    <string name="enter">Enter your feedback here! ( min 6 characters)</string>
    <string name="submit">Submit</string>
    <string name="crashes_bugs">Crashes &amp; Bugs</string>
    <string name="susggestion">Suggestion</string>
    <string name="others">Others</string>
    <string name="play">Play</string>
    <string name="introduction">Introduction</string>
    <string name="downloads">Downloads</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="watch_movie_in_n_virtual_reality">Watch movies in\nVirtual Reality</string>
    <string name="download_and_watch_offline_n_wherever_you_are">Download and watch offline\nwherever you are</string>
    <string name="get_in">Get In</string>
    <string name="resume_download">Resume Download</string>
    <string name="info">Details</string>
    <string name="data_not_available">Data not available</string>
    <string name="series_movie">Series movie</string>
    <string name="feature_film">Feature film</string>
    <string name="cartoon">Cartoon</string>
    <string name="tv_show">Tv Show</string>
    <string name="vietsub">VietSub</string>
    <string name="demos">Demos</string>
    <string name="movies_now_showing">Movies Now Showing</string>
    <string name="completed_series">Completed Series</string>
    <string name="language">Language</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_spain" translatable="false">Espalier</string>
    <string name="language_portugal" translatable="false">Portuguese</string>
    <string name="language_hindi" translatable="false">भारतीय भाषा</string>
    <string name="language_germany" translatable="false">Deutsch</string>
    <string name="language_brazil" translatable="false">Lingua Brasilia</string>
    <string name="language_japan" translatable="false">日本</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_france" translatable="false">Francais</string>
    <string name="language_china" translatable="false">中国人</string>
    <string name="language_indo" translatable="false">Indonesia</string>
    <string name="language_dutch_nl" translatable="false">Dutch</string>
    <string name="language_danish_da" translatable="false">Danish</string>
    <string name="language_zuhu_zu" translatable="false">Zulu</string>
    <string name="language_viet_nam" translatable="false">Việt Nam</string>
    <string name="language_irish_en_ie" translatable="false">Irish</string>
    <string name="language_italian_it" translatable="false">Italian</string>
    <string name="language_polish_pl" translatable="false">Polish</string>
    <string name="language_russian" translatable="false">Russian</string>
    <string name="language_turkish" translatable="false">Turkish</string>
    <string name="language_malay" translatable="false">Malay</string>
    <string name="language_filipino" translatable="false">Filipino</string>
    <string name="language_ukrainian" translatable="false">Ukrainian</string>
    <string name="language_afrikaans" translatable="false">Afrikaans</string>
    <string name="dob_is_not_emty">Date of birth not empty</string>
    <string name="interstitial_ads1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ads1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="search_for_show_movie">Search for show, movie</string>
    <string name="search">Search</string>
</resources>
