<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/downloads"
        app:titleTextColor="@color/text_primary" />

    <TextView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:text="Danh Sách" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/smart_downloads"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_settings_outline"
            app:drawableTint="@color/text_secondary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_downloaded_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="10"
            tools:listitem="@layout/item_downloaded" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/splash_btn_background"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/find_something_to_download"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp" />
</LinearLayout>